--- a/carrinho.html
+++ b/carrinho.html
@@ -4,32 +4,203 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho de Compras</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: #f5f5f5; /* Fundo claro */
+            color: #333; /* Texto escuro */
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #007BFF; /* Azul com bom contraste */
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            margin: 10px 0;
+        }
+
+        nav li {
+            margin: 0 10px;
+        }
+
+        nav a {
+            color: #ffffff;
+            text-decoration: none;
+            background-color: #0056b3; /* Azul mais escuro para contraste */
+            padding: 10px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        nav a:hover {
+            background-color: #004080; /* Azul mais escuro */
+        }
+
+        #carrinho {
+            padding: 20px;
+            margin: auto;
+            max-width: 800px;
+        }
+
+        .livro-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+
+        .livro {
+            background-color: #ffffff;
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            padding: 15px;
+            max-width: 250px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .livro img {
+            width: 100%;
+            height: auto;
+            border-radius: 4px;
+            margin-bottom: 10px;
+        }
+
+        .livro h3 {
+            font-size: 1.2em;
+            color: #222;
+            margin-bottom: 5px;
+        }
+
+        .livro p {
+            color: #555;
+            margin: 5px 0;
+        }
+
+        button, .atualizar {
+            background-color: #28a745; /* Verde com bom contraste */
+            color: #ffffff;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s, box-shadow 0.3s;
+            margin-top: 10px;
+        }
+
+        button:hover, .atualizar:hover {
+            background-color: #218838; /* Verde mais escuro */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        button:focus, .atualizar:focus {
+            outline: 2px solid #333; /* Contorno de foco visível */
+            outline-offset: 2px;
+        }
+
+        .excluir {
+            background-color: #dc3545; /* Vermelho com bom contraste */
+            color: #ffffff;
+        }
+
+        .excluir:hover {
+            background-color: #c82333; /* Vermelho mais escuro */
+        }
+
+        #mensagem-vazio {
+            font-size: 1.2em;
+            color: #444;
+            text-align: center;
+            margin-top: 20px;
+            display: none; /* Oculto por padrão */
+        }
+
+        footer {
+            background-color: #333;
+            color: #ffffff;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Livros Selecionados</h1>
+        <h1 aria-label="Títulos dos livros selecionados para compra">Livros Selecionados</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Voltar para a Livraria</a></li>
+                <li><a href="index.html" aria-label="Voltar para a página principal da Livraria">Voltar para a Livraria</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="carrinho">
-        <h2>Seu Carrinho</h2>
-        <div class="livro-container">
-            <!-- Livros selecionados serão renderizados aqui -->
+        <h2 aria-label="Resumo do seu carrinho de compras">Seu Carrinho</h2>
+        <div class="livro-container" aria-label="Lista de livros selecionados no carrinho">
+            <!-- Livros selecionados serão renderizados dinamicamente aqui -->
         </div>
-        <p id="mensagem-vazio"></p>
-        <!-- Botão para atualizar a página do carrinho -->
-        <button class="atualizar" onclick="atualizarCarrinho()">Atualizar Carrinho</button>
+        <p id="mensagem-vazio" aria-label="Mensagem de carrinho vazio">Seu carrinho está vazio</p>
+        <button class="atualizar" onclick="atualizarCarrinho()" aria-label="Atualizar o conteúdo do carrinho">Atualizar Carrinho</button>
     </section>
 
     <footer>
         <p>&copy; 2024 Livraria Peneluc. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="carrinho.js"></script>
+    <script>
+        function renderizarCarrinho() {
+            const container = document.querySelector('.livro-container');
+            const mensagemVazio = document.getElementById('mensagem-vazio');
+            let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+
+            container.innerHTML = ''; // Limpa o container antes de renderizar novamente
+
+            if (carrinho.length === 0) {
+                mensagemVazio.style.display = 'block'; // Mostra a mensagem de vazio
+                container.style.display = 'none'; // Oculta a lista de livros
+            } else {
+                mensagemVazio.style.display = 'none'; // Oculta a mensagem de vazio
+                container.style.display = 'flex'; // Exibe a lista de livros
+
+                carrinho.forEach((livro, index) => {
+                    const livroDiv = document.createElement('div');
+                    livroDiv.classList.add('livro');
+                    livroDiv.innerHTML = `
+                        <img src="${livro.imagem}" alt="Capa do livro ${livro.nome} por ${livro.autor}">
+                        <h3>${livro.nome}</h3>
+                        <p>Autor: ${livro.autor}</p>
+                        <button class="excluir" onclick="excluirDoCarrinho(${index})" aria-label="Remover ${livro.nome} do carrinho">Remover do Carrinho</button>
+                    `;
+                    container.appendChild(livroDiv);
+                });
+            }
+        }
+
+        function excluirDoCarrinho(index) {
+            let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+            carrinho.splice(index, 1); // Remove o item da lista pelo índice
+            localStorage.setItem('carrinho', JSON.stringify(carrinho)); // Atualiza o LocalStorage
+            renderizarCarrinho(); // Re-renderiza o carrinho
+        }
+
+        window.onload = function() {
+            renderizarCarrinho();
+        };
+    </script>
 </body>
 </html>
